--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -1,6 +1,6 @@
 ---
 title: "The Family" 
-hero: "family/fam-os.jpg"
+hero: "family/fam-os.jpg" 
 ---
 
 
@@ -13,6 +13,7 @@ hero: "family/fam-os.jpg"
       <!-- COL 1 -->
       <div class="fl w-100 w-50-l ph4 mb4-l">
 
+        <!-- <%= image_tag 'family/fam-os.jpg', :class => 'w-100' %> -->
         <h3 class="normal mt0">Randy Dunn</h3>
         <%= image_tag ' family/randy-os.jpg', :class => 'w-100' %>
         <p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his making wine for Charlie Wagner as the first enologist for Caymus Vineyards, and never looked back. Now after all these years, not a lot has changed. More of a farmer, he’s hands on in vineyards most days. His love for Howell Mountain lead him to be instrumental in establishing it as a sub Appellation of the Napa Valley. And if he’s not farming the mountain, he’s mountain biking on it, flying his plane over it, or finding ways to preserve it for future generations. He is happy to be called a dirt-loving hippie, but you’d probably think he’s more of a cowboy.
