--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,8 @@
 ---
 hero: "home/home.jpg" 
+layout: "full-bleed"
 ---
 
-<section class="mw8 center mv5">
+<section class="w-100 center mv5">
   <p class="measure lh-copy tc mt0 mb0 center i f3">Since 1979, Randy and Lori Dunn have owned and operated Dunn Vineyards and continue to produce one of the most highly acclaimed Cabernet Sauvignons from Howell Mountain and the Napa Valley.</p>
 </section>
