--- a/source/tasting-notes.html.erb
+++ b/source/tasting-notes.html.erb
@@ -76,7 +76,7 @@ var addTagHandlers = function(){
 
 var createNumLabels = function(){
 	for(var i=2013; i>1978; i--){
-		$("div#tags").append("<label class=\"mr4 dib\" id=\"" + i + "\">" + i + "</label>");
+		$("div#tags").append("<label class=\"w3 dib\" id=\"" + i + "\">" + i + "</label>");
 	}
 	//$("div#tags label").addClass('db');
 	//console.log('created the number labeles ... ');
