--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -1,11 +1,28 @@
 ---
-title: "History"
+title: "The Story"
 ---
 
 <section class="mv5 mw8 center">
-  <% data.stories.each do |f| %>
-    <h3 class="mt4"><%= f.year %></h3> 
-    <p class="lh-copy measure center"><%= f.story %></p>
-  <% end %>
+  <div class="center pv3 cf mw8">
+    <div class="w-100 center cf">
+
+      <!-- COL 1 -->
+      <div class="fl w-100 w-50-l ph4 mb4-l">
+        <% data.stories.each do |f| %>
+          <h3 class="mt4"><%= f.year %></h3> 
+          <p class="lh-copy measure center"><%= f.story %></p>
+        <% end %>
+      </div>
+
+      <!-- COL 2 -->
+      <div class="fl w-100 w-50-l ph4">
+        <% data.family.each do |f| %>
+          <%= image_tag f.photo, :class => 'w-100' %>
+          <p class="f5 i mt1 mb4"><%= f.caption %></p>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
 </section>
 
