--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -76,9 +76,9 @@ hero: "place/coyote.jpg"
 <section class="mv5 mw8 center">
   <div class="center measure">
     <h2 class="normal mt5 mb0">Open Space</h2>
-    <p class="lh-copy measure i">Sixty three of these forested acres are entrusted to the Napa Valley Land Trust . This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.</p>
+    <p class="lh-copy measure i">Sixty three of these forested acres are entrusted to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dark-blue dim'  %>. This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.</p>
 
-    <p class="lh-copy measure">Randy and Lori’s first donation to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank  %>  was in 2004. The Sentinel Hill property consisted of 64-acre of completely forested land as you enter the town of Angwin on Howell Mountain. The second donation, the Dunn’s gift of $5 million, was the largest donation in the history of the Land Trust. This gift was to the Napa Valley Wild Campaign to preserve and protect the Wildlake and Duff Ranches, inspiring the community to jump start the raising of more than $25 million in order to preserve and protect the 4,000 acre that make up the two ranches. This forested land is abundant in native vegetation and wildlife, and will remain so.</p>
+    <p class="lh-copy measure">Randy and Lori’s first donation to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dark-blue dim'  %>  was in 2004. The Sentinel Hill property consisted of 64-acre of completely forested land as you enter the town of Angwin on Howell Mountain. The second donation, the Dunn’s gift of $5 million, was the largest donation in the history of the Land Trust. This gift was to the Napa Valley Wild Campaign to preserve and protect the Wildlake and Duff Ranches, inspiring the community to jump start the raising of more than $25 million in order to preserve and protect the 4,000 acre that make up the two ranches. This forested land is abundant in native vegetation and wildlife, and will remain so.</p>
 
     <p class="lh-copy measure">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
   </div>
