--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -25,7 +25,7 @@ hero: "wine/wines-slider.jpg"
 		<div class="fl w-100 w-50-l ph4">
 			<h2 class="normal mt0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
-      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dark-blue link underline-hover' %> .</p>
+      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dark-blue link dim' %> .</p>
 					</div>
 
 		<div class="fl w-100 w-50-l ph4">
@@ -34,7 +34,7 @@ hero: "wine/wines-slider.jpg"
 		</div>
     </div>
       <p class="lh-copy measure-narrow center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
-			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
+			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dark-blue link dim' %></p>
 </section>
 
    <img src="/images/wine/89-howell.jpg" class="w-100">
@@ -43,7 +43,7 @@ hero: "wine/wines-slider.jpg"
      <div class="mw8 center cf">
        <div class="fl w-100 w-50-l ph4">
          <h2 class="normal mt0 tc">Availability</h2>
-         <p class="lh-copy measure mb0">Each fall we offer our latest release to our mailing list. To subscribe to the mailing list or for inquiries about it, please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link underline-hover' %>. Our wine is also are available in select retail and restaurant locations across the country.</p>
+         <p class="lh-copy measure mb0">Each fall we offer our latest release to our mailing list. To subscribe to the mailing list or for inquiries about it, please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link dim' %>. Our wine is also are available in select retail and restaurant locations across the country.</p>
        </div>
        <div class="fl w-100 w-50-l ph4">
          <h2 class="normal mt0 tc">Library Wines</h2>
