--- a/source/how-to-remove-the-wax.html.erb
+++ b/source/how-to-remove-the-wax.html.erb
@@ -1,6 +1,7 @@
 ---
 title: "How to Remove the Red Wax" 
 hero: "wine/vertical.jpg"
+layout: "standard"
 ---
 <section class="tc">
   <iframe width="853" height="480" src="http://www.youtube.com/embed/ydvf8yq2NOU" frameborder="0" allowfullscreen></iframe>
