--- a/source/layouts/full-bleed.erb
+++ b/source/layouts/full-bleed.erb
@@ -1,50 +1,19 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<% wrap_layout :layout do %>
 
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <section  class="pt4" style="background: url('/images/<%= current_page.data.hero %>') top center; background-size: cover; height: 100vh;">
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Dunn Vineyards" %></title>
-
-		<%= stylesheet_link_tag "normalize" %>
-		<link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-
-		<%= javascript_include_tag  "all" %>
-
-		<style>
-			html {
-				-webkit-font-smoothing: antialiased;
-			}
-		</style>
-	</head>
-
-  <body class="<%= page_classes %> athelas black-70 f4">
-   <section  class="pt4" style="background: url('/images/<%= current_page.data.hero %>') top center; background-size: cover; height: 100vh;">
-    <header class="mw8 center pb4">
+    <header class="mw8 center tc mb4">
       <% link_to '/', :class => "link dib"  do %>
         <%= image_tag 'logo.png', :class => "pl1", :height => "72" %>
       <% end %>
-      <nav class="fr" style="line-height: 72px;">
-        <%= link_to  'The Wine', 'wines', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Place', 'place', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Family', 'family', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Story', 'story', :class => 'dark-blue link dim ph3' %>
-      </nav>
+      <div class="button">
+        <a class="btn-open" href="#"></a>
+      </div>
     </header>
+
+    <%= partial 'hamburger-overlay' %>
+
     <%= yield %>
-   </section>
 
-
-    <%= partial 'footer' %>
-
-  </body>
-</html>
+  </section>
+<% end %>
