--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -27,7 +27,7 @@
 		</style>
 	</head>
 
-  <body class="<%= page_classes %> pv4 athelas black-70 f4">
+  <body class="<%= page_classes %> athelas black-70 f4">
 
 
     <%= yield %>
