--- a/source/layouts/standard.erb
+++ b/source/layouts/standard.erb
@@ -1,6 +1,6 @@
 <% wrap_layout :layout do %>
 
-  <header class="mw8 center pb4">
+  <header class="mw8 center pv4">
 
     <% link_to '/', :class => "link dib"  do %>
       <%= image_tag 'logo.png', :class => "pl1", :height => "72" %>
