--- a/source/stylesheets/dunn.css
+++ b/source/stylesheets/dunn.css
@@ -4,12 +4,6 @@
 
 /*styling open close button*/
 .button {
-    display:inline;
-    position:absolute;
-    right:50px;
-    top:6px;
-    z-index:999;
-    font-size:30px;
 }
 .button a {
     text-decoration:none;
@@ -24,10 +18,10 @@
     -o-transition:all .2s linear 0s;
 }
 .btn-open:hover:after {
-    color:#34B484;
+    color:#333;
 }
 .btn-close:after {
-    color:#fff;
+    color:#ffffff;
     content:"\f00d";
     font-family:"FontAwesome";
     transition-property:all .2s linear 0s;
@@ -36,7 +30,7 @@
     -o-transition:all .2s linear 0s;
 }
 .btn-close:hover:after {
-    color: #34B484;
+    color: #ffffff;
 }
 
 .overlay {
