--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -3,7 +3,7 @@ title: "Contact"
 layout: "standard"
 
 ---
-
+<p class="bg-light-yellow pa4 dib">Need a big image for this page, and maybe one at the bottom too.</p>
 <section class="mv5">
 	<div class="mw8 center cf mb4">
 
