--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -1,6 +1,6 @@
 ---
 title: "The Family" 
-hero: "family/fam-os-bw.jpg" 
+hero: "family/fam-os-2.jpg" 
 layout: "standard"
 ---
 
@@ -42,10 +42,15 @@ layout: "standard"
         <%= image_tag ' family/erin.jpg', :class => 'w-100' %>
         <p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
 
+
+        <p class="bg-light-yellow pa4 dib">Names, bios, photos of employees"</p>
+
       </div>
 
     <!-- COL 2 -->
       <div class="fl w-100 w-50-l ph4">
+        
+        <p class="bg-light-yellow pa4 dib">If the layout is ok, then we just need final selection of images and copy for each.</p>
 
         <% data.family.each do |f| %>
           <%= image_tag f.photo, :class => 'w-100' %>
