--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -16,10 +16,12 @@ layout: "standard"
 <section class="mv5 mw8 center">
 
 <img class="w-100" src="http://via.placeholder.com/1400x400?text=Howell+AVA+Map?">
+  <p class="pa4 bg-light-yellow dib">Do we need a map of the region?</p>
   <div class="center measure">
     <h2 class="normal mt5 mb0">The Mountain</h2>
     <p class="lh-copy">Recognizing the distinctiveness of the wines from Howell Mountain, Randy and some of the other winemakers sought to have the region recogized as a specific sub-region of Napa. Randy photographed the area from his plane and they submitted the application in 1981. In 1983, Howell Mountain became the first sub appelation of the Napa AVA.
   </div>
+  <p class="pa4 bg-light-yellow dib">Is this copy right?  Keep?</p>
 </section>
 
 <!-- <%= image_tag 'place/side-hill.jpg', :class => 'w-100' %> -->
@@ -27,6 +29,8 @@ layout: "standard"
 
 
 <%= image_tag 'place/vineyard-map.png', :class => 'w-100' %>
+<%= image_tag 'place/vineyard-map-gd.jpg', :class => 'w-100' %>
+  <p class="pa4 bg-light-yellow dib">left in both maps so we can compare.</p>
 
 <section class="mv5 mw8 center">
   
@@ -83,6 +87,7 @@ layout: "standard"
 
     <p class="lh-copy measure">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
   </div>
+  <p class="pa4 bg-light-yellow dib">Shorten and simplify? Make it fit with the notes in the Story section.</p>
 </section>
 
 <%= image_tag 'place/drone.jpg', :class => 'w-100' %>
