--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -53,4 +53,6 @@ layout: "standard"
      </div>
    </section>
 
+   <p class="pa4 bg-light-yellow dib">Need an image to close this section</p>
+
 
