--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,15 +10,24 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Dunn Vineyards" %></title>
 
-		<%= stylesheet_link_tag "normalize", "dunn" %>
+		<%= stylesheet_link_tag "normalize", "dunn", "finaltilesgallery" %>
 		<link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
-    <script
+<!--    <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
+
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
 		<%= javascript_include_tag  "all" %>
+    <script src="/javascripts/jquery-1.11.1.min.js"></script>
+    <script src="/javascripts/jquery.finaltilesgallery.js"></script>
+		<script src="/javascripts/lightbox2.js"></script> 
+
+    <!-- Include Final Tiles Gallery stylesheet -->
+    <link rel="stylesheet" href="/stylesheets/finaltilesgallery.css">
+		<link rel="stylesheet" href="/stylesheets/lightbox2.css"> 
 
 		<style>
 			html {
@@ -47,6 +56,23 @@
 				$(".button a").toggleClass('btn-open').toggleClass('btn-close');
 				open = false;
 			}); 
+
+      $(document).ready(function() {
+        $('.final-tiles-gallery').finalTilesGallery({
+            layout: 'columns',
+						columns: [
+								[4000, 3],
+								[1024, 2],
+								[800, 2],
+								[480, 1],
+								[320, 1]
+						],
+						margin: 36,
+						minTileWidth: 400,
+						gridSize: 10,
+						imageSizeFactor: [[4000, .4],[1024, .3],[800, .7],[600, .6],[480, .5]]
+        });
+      });
     </script>
 
   </body>
