story and family tweaks and photos

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -42,6 +42,25 @@ layout: "standard"
         <%= image_tag ' family/erin.jpg', :class => 'w-100' %>
         <p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
 
+        <h3 class="normal mt5">Raul Martinez</h3>
+        <!-- <%= image_tag ' family/.jpg', :class => 'w-100' %> -->
+        <p class="lh-copy measure">Vineyard manager Raul Martinez was the first employee. He came on in 1987 to help Randy in the vineyards and he is still running the vineyard today.</p>
+
+        <h3 class="normal mt5">Adan Salgado</h3>
+        <p class="lh-copy measure">Adan joined the crew in 2001 and has been an invaluable contributer ever since. He's the one to thank for the wax on the Howell Mountain bottles. It's not an easy job but Adan cranks them out at 100 cases per day!</p>
+
+        <h3 class="normal mt5">Rosalio Olivera</h3>
+        <p class="lh-copy measure">Rosalio came onboard in 2005 to help in the vineyard and has been a valuable member of the team ever since.</p>
+
+        <h3 class="normal mt5">Adriaan Foote</h3>
+        <%= image_tag ' family/adrian.jpg', :class => 'w-100' %>
+        <p class="lh-copy measure">Joining in 2014, Adrian was brought on to help Mike in the cellar.</p>
+
+        <h3 class="normal mt5">Ben Hiza</h3>
+        <p class="lh-copy measure">Ben arrived in time to help with the 2013 bottling and hasn't left yet. While he's in charge of distribution and tours, he's already ready to help with whatever needs doing.</p>
+
+        <h3 class="normal mt5"></h3>
+        <p class="lh-copy measure"></p>
 
         <p class="bg-light-yellow pa4 dib">Names, bios, photos of employees"</p>
 
