cleaned up wine images

--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -1,6 +1,6 @@
 ---
 title: "The Wine" 
-hero: "wine/wines-slider.jpg"
+hero: "wine/hero.jpg"
 layout: "standard"
 
 ---
@@ -53,6 +53,6 @@ layout: "standard"
      </div>
    </section>
 
-   <p class="pa4 bg-light-yellow dib">Need an image to close this section</p>
+   <img src="/images/wine/caves.jpg" class="w-100">
 
 
