more photo cleanup

--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -1,6 +1,6 @@
 ---
 title: "The Place" 
-hero: "place/coyote.jpg"
+hero: "place/drone.jpg"
 layout: "standard"
 ---
 
@@ -23,10 +23,6 @@ layout: "standard"
   </div>
   <p class="pa4 bg-light-yellow dib">Is this copy right?  Keep?</p>
 </section>
-
-<!-- <%= image_tag 'place/side-hill.jpg', :class => 'w-100' %> -->
-
-
 
 <%= image_tag 'place/vineyard-map.png', :class => 'w-100' %>
 <%= image_tag 'place/vineyard-map-gd.jpg', :class => 'w-100' %>
@@ -90,4 +86,4 @@ layout: "standard"
   <p class="pa4 bg-light-yellow dib">Shorten and simplify? Make it fit with the notes in the Story section.</p>
 </section>
 
-<%= image_tag 'place/drone.jpg', :class => 'w-100' %>
+<%= image_tag 'place/coyote.jpg', :class => 'w-100' %>
