--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -7,77 +7,193 @@ layout: "standard"
 
 <section class="mv5 mw8 center">
   
-  <div class="center pv3 cf mw8">
-    <div class="w-100 center cf">
+	<!-- FAMILY BIOS -->
 
-
-      <!-- COL 1 -->
-      <div class="fl w-100 w-50-l ph4 mb4-l">
-
-        <!-- <%= image_tag 'family/fam-os.jpg', :class => 'w-100' %> -->
-        <h3 class="normal mt0">Randy Dunn</h3>
+    
+    <div class="w-100 cf">
+      
+	<!-- COL 1 -->
+  
+	    <div class="fl w-100 w-50-l ph4 mb4-l">
         <%= image_tag ' family/randy-os.jpg', :class => 'w-100' %>
+        <h3 class="normal mt0">Randy Dunn</h3>
         <p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his making wine for Charlie Wagner as the first enologist for Caymus Vineyards, and never looked back. Now after all these years, not a lot has changed. More of a farmer, he’s hands on in vineyards most days. His love for Howell Mountain lead him to be instrumental in establishing it as a sub Appellation of the Napa Valley. And if he’s not farming the mountain, he’s mountain biking on it, flying his plane over it, or finding ways to preserve it for future generations. He is happy to be called a dirt-loving hippie, but you’d probably think he’s more of a cowboy.
-
-        <h3 class="normal mt5">Lori Dunn</h3>
-        <%= image_tag ' family/lori-os.jpg', :class => 'w-100' %>
-        <p class="lh-copy measure">Co-founder of Dunn Vineyards and matriarch of the family, Lori is the glue that holds it all together. She managed everything from the accounting to kids.  Happy not to be involved in the day to day tasks (especially waxing the bottles), she loves spending time with her grand kids, quilting relaxing at her oasis on Bodega Bay, and making sure that the gardens meet her Master Gardner specifications.</p>
-
-        <h3 class="normal mt5">Mike Dunn</h3>
-        <%= image_tag ' family/mike-os.jpg', :class => 'w-100' %>
-        <p class="lh-copy measure">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= link_to 'Retro Cellars',  'http://www.retrocellars.com', :class=>'dark-blue link dim' %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
-
-        <h3 class="normal mt5">Jennifer Dunn</h3>
-        <p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives.</p> 
-
-        <h3 class="normal mt5">Kristina Dunn-Buchanan</h3>
-        <%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
-        <p class="lh-copy measure">Marketer, mediator, and now mostly full time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.  
-
-
-        <h2 class="normal mt5">The Vineyard Family</h2>
-
-
-        <h3 class="normal mt5">Erin Begerow</h3>
-        <%= image_tag ' family/erin.jpg', :class => 'w-100' %>
-        <p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
-
-        <h3 class="normal mt5">Raul Martinez</h3>
-        <!-- <%= image_tag ' family/.jpg', :class => 'w-100' %> -->
-        <p class="lh-copy measure">Vineyard manager Raul Martinez was the first employee. He came on in 1987 to help Randy in the vineyards and he is still running the vineyard today.</p>
-
-        <h3 class="normal mt5">Adan Salgado</h3>
-        <p class="lh-copy measure">Adan joined the crew in 2001 and has been an invaluable contributer ever since. He's the one to thank for the wax on the Howell Mountain bottles. It's not an easy job but Adan cranks them out at 100 cases per day!</p>
-
-        <h3 class="normal mt5">Rosalio Olivera</h3>
-        <p class="lh-copy measure">Rosalio came onboard in 2005 to help in the vineyard and has been a valuable member of the team ever since.</p>
-
-        <h3 class="normal mt5">Adriaan Foote</h3>
-        <%= image_tag ' family/adrian.jpg', :class => 'w-100' %>
-        <p class="lh-copy measure">Joining in 2014, Adrian was brought on to help Mike in the cellar.</p>
-
-        <h3 class="normal mt5">Ben Hiza</h3>
-        <p class="lh-copy measure">Ben arrived in time to help with the 2013 bottling and hasn't left yet. While he's in charge of distribution and tours, he's already ready to help with whatever needs doing.</p>
-
-        <h3 class="normal mt5"></h3>
-        <p class="lh-copy measure"></p>
-
-        <p class="bg-light-yellow pa4 dib">Names, bios, photos of employees"</p>
-
       </div>
 
-    <!-- COL 2 -->
+	<!-- COL 2 -->
       <div class="fl w-100 w-50-l ph4">
-        
-        <p class="bg-light-yellow pa4 dib">If the layout is ok, then we just need final selection of images and copy for each.</p>
-
-        <% data.family.each do |f| %>
-          <%= image_tag f.photo, :class => 'w-100' %>
-          <p class="f5 i mt1 mb4"><%= f.caption %></p>
-        <% end %>
-
+        <%= image_tag ' family/lori-os.jpg', :class => 'w-100' %>
+        <h3 class="normal mt0">Lori Dunn</h3>
+        <p class="lh-copy measure">Co-founder of Dunn Vineyards and matriarch of the family, Lori is the glue that holds it all together. She managed everything from the accounting to kids.  Happy not to be involved in the day to day tasks (especially waxing the bottles), she loves spending time with her grand kids, quilting relaxing at her oasis on Bodega Bay, and making sure that the gardens meet her Master Gardner specifications.</p>
       </div>
+    </div>
+  
+  
+	<!-- ROW 2 -->
+    <div class="w-100 center cf">
+	<!-- COL 1 -->
+      <div class="fl w-100 w-50-l ph4 mb4-l">
+        <%= image_tag ' family/mike-os.jpg', :class => 'w-100' %>
+        <h3 class="normal mt0">Mike Dunn</h3>
+        <p class="lh-copy measure">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= link_to 'Retro Cellars',  'http://www.retrocellars.com', :class=>'dark-blue link dim' %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
+      </div>
+
+	<!-- COL 2 -->
+      <div class="fl w-100 w-50-l ph4">
+        <%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
+        <h3 class="normal mt0">Kristina Dunn-Buchanan</h3>
+        <p class="lh-copy measure">Marketer, mediator, and now mostly full time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.  
+    
+	</div>
+</div>
+  
+
+	<!-- ROW 3 -->
+
+
+    <div class="w-100 center cf">
+      <div class="fl w-100 w-50-l ph4 mb4-l">
+        <%= image_tag ' family/jenny-portrait.jpg', :class => 'w-100' %>
+      </div>
+
+			<div class="fl w-100 w-50-l ph4">
+				<h3 class="normal pt5">Jennifer Dunn</h3>
+				<p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives.</p> 
+			</div>
 
     </div>
+
+</div>
+ </section> 
+
+
+
+<section class="mw8 center">
+	
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf mw9 center">
+    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/fam-picnic.jpg) center;"></div>
+    </div>
+		<!--
+		<div class="fl w-50 w-25-l pl2 pr2-m ph2-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/mike-picking.jpg) center;"> </div>
+    </div>
+		-->
+ 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/randy-lori.jpg) left;"> </div>
+    </div> 
   </div>
+
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
+      <div class="cover" style="background:black url(/images/family/fam-pumpkin.jpg) center; padding: 10rem 0;"></div>
+    </div>
+<!--
+		<div class="fl w-50 pl2 pr2-m ph2-l mb3 mb4-l">
+      <div class="cover pv5 pv6-ns" style="background:black url(/images/family/fam-pumpkin.jpg) center;"> </div>
+    </div>
+-->
+ 		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover" style="background:black url(/images/family/fam-1984ish.jpg) left;padding: 10rem 0;"> </div>
+    </div> 
+  </div>
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf mw9 center">
+    <div class="fl w-third pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/mike-picking.jpg) center;"></div>
+    </div>
+		<!--
+		<div class="fl w-50 w-25-l pl2 pr2-m ph2-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/mike-picking.jpg) center;"> </div>
+    </div>
+		-->
+ 		<div class="fl w-two-thirds pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/jenny-cheerleader.jpg) left;"> </div>
+    </div> 
+  </div>
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
+      <div class="cover" style="background:black url(/images/family/fam-rlm.jpg) center; padding: 10rem 0;"></div>
+    </div>
+<!--
+		<div class="fl w-50 pl2 pr2-m ph2-l mb3 mb4-l">
+      <div class="cover pv5 pv6-ns" style="background:black url(/images/family/fam-pumpkin.jpg) center;"> </div>
+    </div>
+-->
+ 		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover" style="background:black url(/images/family/fam-os.jpg) left;padding: 10rem 0;"> </div>
+    </div> 
+  </div>
+
 </section>
+
+<section class="mw8 center">
+  
+	<h2 class="normal mt5 tc">The Vineyard Family</h2>
+   		
+	<div class="w-100 center cf"> 
+		<!-- COL 1 -->
+		<div class="fl w-100 w-50-l ph4 mb4-l">
+			<h3 class="normal mt5">Erin Begerow</h3>
+			<p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
+			<h3 class="normal mt5">Raul Martinez</h3>
+			<p class="lh-copy measure">Vineyard manager Raul Martinez was the first employee. He came on in 1987 to help Randy in the vineyards and he is still running the vineyard today.</p>
+        <h3 class="normal mt5">Adan Salgado</h3>
+        <p class="lh-copy measure">Adan joined the crew in 2001 and has been an invaluable contributer ever since. He's the one to thank for the wax on the Howell Mountain bottles. It's not an easy job but Adan cranks them out at 100 cases per day!</p>
+		</div>
+		<div class="fl w-100 w-50-l ph4">
+        <h3 class="normal mt5">Rosalio Olivera</h3>
+        <p class="lh-copy measure">Rosalio came onboard in 2005 to help in the vineyard and has been a valuable member of the team ever since.</p>
+        <h3 class="normal mt5">Adriaan Foote</h3>
+        <p class="lh-copy measure">Joining in 2014, Adrian was brought on to help Mike in the cellar.</p>
+        <h3 class="normal mt5">Ben Hiza</h3>
+        <p class="lh-copy measure">Ben arrived in time to help with the 2013 bottling and hasn't left yet. While he's in charge of distribution and tours, he's already ready to help with whatever needs doing.</p>
+		</div>
+	</div>
+
+</section>
+
+<section class="mw8 center">
+	
+
+<!-- SCRAPBOOK ROW --> 
+
+	<div class="w-100 cf mw9 center">
+		<div class="fl w-100 pr2 pr3-l mb3 mb4-l">
+			<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/who.jpg) center;"></div>
+		</div>
+	</div>
+	
+	<!-- SCRAPBOOK ROW --> 
+<!--
+	<div class="w-100 cf mw9 center">
+		<div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
+			<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/adrian.jpg) center;"></div>
+		</div>
+		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
+			<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/alex.jpg) left;"> </div>
+		</div> 
+	</div>
+-->
+	<!-- SCRAPBOOK ROW --> 
+
+	<div class="w-100 cf center">
+		<div class="fl w-50 pr2 pr3-l mb3 mb4-l">
+			<div class="cover" style="background:black url(/images/family/erin.jpg) center; padding: 10rem 0;"></div>
+		</div>
+		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
+			<div class="cover" style="background:black url(/images/family/adrian.jpg) left;padding: 10rem 0;"> </div>
+		</div> 
+	</div>
+
+</section>
+
+
+
