updated place copy, removed moved test pages

--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -14,14 +14,23 @@ layout: "standard"
 <%= image_tag 'place/tractor.jpg', :class => 'w-100' %>
 
 <section class="mv5 mw8 center">
-
-<img class="w-100" src="http://via.placeholder.com/1400x400?text=Howell+AVA+Map?">
-  <p class="pa4 bg-light-yellow dib">Do we need a map of the region?</p>
   <div class="center measure">
+
+		<blockquote class="mb4 measure-narrow center">
+		<p class="lh-copy i mb0">I thought it was pretty and that I could make some good wine.</p>
+			<cite class="f5 tr db"> &mdash; <span class="tracked ttu">Randy Dunn</span></cite>
+			<cite class="f5 tr db">(on why he decided to farm on Howell Mountain)</cite>
+	</blockquote>
+
     <h2 class="normal mt5 mb0">The Mountain</h2>
-    <p class="lh-copy">Recognizing the distinctiveness of the wines from Howell Mountain, Randy and some of the other winemakers sought to have the region recogized as a specific sub-region of Napa. Randy photographed the area from his plane and they submitted the application in 1981. In 1983, Howell Mountain became the first sub appelation of the Napa AVA.
+    <p class="lh-copy">Bill Smith led a group of 5 winemakers and grape growers to define what today is the Howell Mountain AVA. The AVA’s boundary starts at an elevation of 1400’ so even when it is cool and foggy on the valley floor, it is sunny and breezy up on the mountain. Randy was one of those pioneers and our wine epitomizes what has become synonymous with Howell Mountain Cabernet; deep concentration, bold, massive, ultra rich and elegant.</p>
+
+		<blockquote class="mb4 measure-narrow center mt5">
+		<p class="lh-copy i mb0">Howell Mountain grapes need thick skins to survive and thick skins provide deep flavors and chewy tannins.</p>
+			<cite class="f5 ttu tracked tr db measure"> &mdash; James Laube</cite>
+		</blockquote>
+
   </div>
-  <p class="pa4 bg-light-yellow dib">Is this copy right?  Keep?</p>
 </section>
 
 <%= image_tag 'place/vineyard-map.png', :class => 'w-100' %>
@@ -77,13 +86,18 @@ layout: "standard"
 <section class="mv5 mw8 center">
   <div class="center measure">
     <h2 class="normal mt5 mb0">Open Space</h2>
-    <p class="lh-copy measure i">Sixty three of these forested acres are entrusted to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dark-blue dim'  %>. This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.</p>
+<p class="lh-copy">Randy and Lori’s first involvement in conservation was in 2004 with the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/",    target: :_blank, :class => 'link dark-blue dim'  %> in the form of an easement. The Sentinel Hill property consisted of 64-acres of completely forested land as you enter the town of Angwin on Howell Mountain. The next move was the Dunn’s gift of $5 million, the largest donation in the history of the Land Trust to help purchase the Wildlake Ranch a 3000 acre property up on the mountain.</p>
 
-    <p class="lh-copy measure">Randy and Lori’s first donation to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dark-blue dim'  %>  was in 2004. The Sentinel Hill property consisted of 64-acre of completely forested land as you enter the town of Angwin on Howell Mountain. The second donation, the Dunn’s gift of $5 million, was the largest donation in the history of the Land Trust. This gift was to the Napa Valley Wild Campaign to preserve and protect the Wildlake and Duff Ranches, inspiring the community to jump start the raising of more than $25 million in order to preserve and protect the 4,000 acre that make up the two ranches. This forested land is abundant in native vegetation and wildlife, and will remain so.</p>
 
-    <p class="lh-copy measure">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
+<p class="lh-copy">
+There is a sense of urgency in the Napa Valley, and maybe world wide, to preserve what we have. The influx of big money coming into our area is putting tremendous pressure on our wild lands above the valley floor. Projects to cut down trees and plant vineyards are constantly being battled. 
+</p>
+
+
+<p class="lh-copy i">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
+
+
   </div>
-  <p class="pa4 bg-light-yellow dib">Shorten and simplify? Make it fit with the notes in the Story section.</p>
 </section>
 
 <%= image_tag 'place/coyote.jpg', :class => 'w-100' %>
