--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -1,33 +1,163 @@
 ---
 title: "The Story"
 layout: "standard"
+hero: "story/harvest.jpg"
 ---
 
+
+
 <section class="mv5 mw8 center">
-  <div class="center pv3 cf mw8">
-    <div class="w-100 center cf">
-
-      <!-- COL 1 -->
-      <div class="fl w-100 w-50-l ph4 mb4-l">
-    <p class="lh-copy meausre">After making wine at Caymus for a few years, Randy decided it was time to strike out on his own. In 1978 he and Lori purchased the “Trailer Vinyard” and began farming 51/2 acres of Cabernet in their “free time”.   The next year Randy harvested 9 tons of fruit from the Trailer and Frank vineyards and then bought another 3 tons from Beatty.  When all was said and done he had 660 cases of 750mls, 28 cases of magnums, and 53 five liter bottles.</p>
-    <p class="measure lh-copy">Dunn Vineyards begins … </p>
-    <p class="measure lh-copy">Things happened quickly after that. 1981 marked the bonding of the  winery in Angwin. And by 1984 the ATF approved the Howell Mountain AVA.   [[ talk about living in the White House — was there a trailer before that?]</p>
-    <p class="lh-copy measure">While they were getting the winery off the ground, the Dunns were also building a family.  Both Jenny and Kristina were born as in these years.  As the family outgrew the Western Union building, they started building their new family home on the property.  After moving into “the brown house”, the  White House became the dedicated spot for Dunn Vineyards.  Soon after, Randy had caves dug into the mountain beneath the office.</p>
-    <p class="lh-copy measure">By 2005 the second generation of Dunns stepped up to the plate.  While Mike had been working at the vineyard for years, he was now full time.  Fresh out of Cal Poly with a degree in Wine and Viticulture, Kristina takes over marketing.  With Mike’s son Alex helping out in the cellar, we wonder when the third generation of Dunns will become full time winemakers.</p>
-    <p class="lh-copy measure">The mountain and the climate always keep things interesting.  1981 brought four days of 19degree lows which cut that year’s harvest in half.  The latest harvest was in 2011 — picking didn’t start until October 29th.  Some years we have a special release like when we retired the Trailer Vineyard and grafted [?] onto the existing rootstock in 2016.
-    </p>
-    <p class="lh-copy measure i">We have no intentions of increasing our production or growing the brand. The current size of our farm and its production allows us to be involved in all aspects. If it were any bigger the work would become much more administrative, managerial not to mention the amount of effort to sell the wine would increase exponentially and for us that’s not the fun part.</p>
-      </div>
-
-      <!-- COL 2 -->
-      <div class="fl w-100 w-50-l ph4">
-        <% data.storypics.each do |f| %>
-          <%= image_tag f.photo, :class => 'w-100' %>
-          <p class="f5 i mt1 mb4"><%= f.caption %></p>
-        <% end %>
-      </div>
-
-    </div>
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">Getting Started</h2>
+    <p>After making wine at Caymus for a few years, Randy decided it was time to strike out on his own. In 1978 he and Lori purchased the “Trailer Vinyard” and began farming 51/2 acres of Cabernet in their “free time”.   The next year Randy harvested 9 tons of fruit from the Trailer and Frank vineyards and then bought another 3 tons from Beatty.  When all was said and done he had 660 cases of 750mls, 28 cases of magnums, and 53 five liter bottles.</p>
+    <p>Dunn Vineyards begins &hellip;</p>
   </div>
 </section>
+
+<section class="mw8 center">
+	
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
+    </div> 
+  </div>
+
+</section>
+
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">Going Legit</h2>
+    <p>Things happened quickly after that. 1981 marked the bonding of the  winery in Angwin. And by 1984 the ATF approved the Howell Mountain AVA.   [[ talk about living in the White House — was there a trailer before that?]</p>
+    <p>While they were getting the winery off the ground, the Dunns were also building a family.  Both Jenny and Kristina were born as in these years.  As the family outgrew the Western Union building, they started building their new family home on the property.  After moving into “the brown house”, the  White House became the dedicated spot for Dunn Vineyards.  Soon after, Randy had caves dug into the mountain beneath the office.</p>
+  </div>
+</section>
+
+
+<section class="mw8 center">
+	
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/white-house.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/land-historical.jpg) left;"> </div>
+    </div> 
+  </div>
+
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/airplane.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-50-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/fire-truck-water-fight.jpg) center;"> </div>
+    </div> 
+  </div>
+
+  <div class="w-100 cf center">
+    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/working.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-50-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-caves.jpg) center;"> </div>
+    </div> 
+  </div>
+
+</section>
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">Second Generation</h2>
+    <p class="lh-copy measure">By 2005 the second generation of Dunns stepped up to the plate.  While Mike had been working at the vineyard for years, he was now full time.  Fresh out of Cal Poly with a degree in Wine and Viticulture, Kristina takes over marketing.  With Mike’s son Alex helping out in the cellar, we wonder when the third generation of Dunns will become full time winemakers.</p>
+  </div>
+</section>
+
+
+
+<section class="mw8 center">
+	
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/alex-kristina-stompin.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-truck.jpg) center;"> </div>
+    </div> 
+  </div>
+</section>
+
+<section class="mw8 center">
+	
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
+    </div> 
+  </div>
+
+</section>
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">Highs and Lows (?)</h2>
+    <p class="lh-copy measure">The mountain and the climate always keep things interesting.  1981 brought four days of 19degree lows which cut that year’s harvest in half.  The latest harvest was in 2011 — picking didn’t start until October 29th.  Some years we have a special release like when we retired the Trailer Vineyard and grafted [?] onto the existing rootstock in 2016.
+    </p>
+  </div>
+</section>
+
+
+<section class="mw8 center">
+	
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
+    </div> 
+  </div>
+
+</section>
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">The Future</h2>
+    <p classs="i">We have no intentions of increasing our production or growing the brand. The current size of our farm and its production allows us to be involved in all aspects. If it were any bigger the work would become much more administrative, managerial not to mention the amount of effort to sell the wine would increase exponentially and for us that’s not the fun part.</p>
+    </p>
+  </div>
+</section>
+
+
+<section class="mw8 center">
+	
+	<!-- SCRAPBOOK ROW --> 
+
+  <div class="w-100 cf center">
+    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
+    </div>
+ 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
+      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
+    </div> 
+  </div>
+
+</section>
+
 
