--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -68,7 +68,9 @@ hero: "story/harvest.jpg"
       <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/working.jpg) center;"></div>
     </div>
  		<div class="fl w-50-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-caves.jpg) center;"> </div>
+      <%#<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-caves.jpg) center;"> </div>%>
+      <div class="cover pv5 pv6-m pv7-l bg-gray"><p class="white i v-mid tc">Bonded in 1981</p> </div>
+
     </div> 
   </div>
 
