thinner, better burger

--- a/source/layouts/full-bleed.erb
+++ b/source/layouts/full-bleed.erb
@@ -1,9 +1,16 @@
 <% wrap_layout :layout do %>
 
     <div class="button absolute di top-2 right-2 f2 z-999">
-      <a class="btn-open" href="#"></a>
+      <!-- HAMBURGER MENU -->
+			<div id="nav-icon3" class="dn-l z-999">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
     </div>
-  <section  class="pt5" style="background: url('/images/<%= current_page.data.hero %>') top center; background-size: cover; height: 100vh;">
+    
+    <section  class="pt5" style="background: url('/images/<%= current_page.data.hero %>') top center; background-size: cover; height: 100vh;">
 
 
     <header class="mw8 center tc mb4">
