--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,7 +10,7 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Dunn Vineyards" %></title>
 
-		<%= stylesheet_link_tag "normalize", "dunn" %>
+		<%= stylesheet_link_tag "normalize", "dunn", "hamburger" %>
 		<link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
 <!--    <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -41,17 +41,30 @@
     <%= partial 'footer' %>
     
     <script>
+			<%#$(document).ready(function(){%>
+				<%#$(".button a").click(function(){%>
+					<%#[>$(".overlay").fadeToggle(200);<]%>
+					<%#$(this).toggleClass('btn-open').toggleClass('btn-close');%>
+				<%#});%>
+			<%#});%>
+			<%#$('.overlay').on('click', function(){%>
+				<%#[>$(".overlay").fadeToggle(200);   <]%>
+				<%#$(".button a").toggleClass('btn-open').toggleClass('btn-close');%>
+				<%#[>open = false;<]%>
+			<%#}); %>
+
 			$(document).ready(function(){
-				$(".button a").click(function(){
+				$('#nav-icon3').click(function(){
+          console.log('clicked');
+					$(this).toggleClass('open');
 					$(".overlay").fadeToggle(200);
-					$(this).toggleClass('btn-open').toggleClass('btn-close');
 				});
-			});
-			$('.overlay').on('click', function(){
-				$(".overlay").fadeToggle(200);   
-				$(".button a").toggleClass('btn-open').toggleClass('btn-close');
-				open = false;
-			}); 
+        $('.overlay').on('click', function(){
+          $(".overlay").fadeToggle(200);   
+          $("#nav-icon3").toggleClass('open');
+          <%#open = false;%>
+        });
+      });
 
     </script>
 
