--- a/source/layouts/standard.erb
+++ b/source/layouts/standard.erb
@@ -15,9 +15,37 @@
         <%= link_to  'The Story', 'story', :class => 'dark-blue link dim ph3' %>
       </div>
 
-      <div class="button dn-l">
-        <a class="btn-open" href="#"></a>
-      </div>
+      <%#<div class="button dn-l">%>
+        <%#<a class="btn-open" href="#"></a>%>
+      <%#</div>%>
+
+			<%#<div id="nav-icon1">%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+			<%#</div>%>
+			<%#<div id="nav-icon2">%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+			<%#</div>%>
+
+      <!-- HAMBURGER MENU -->
+			<div id="nav-icon3" class="dn-l z-999">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+
+			<%#<div id="nav-icon4">%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+				<%#<span></span>%>
+			<%#</div>%>
 
     </nav>
 
